recursion.cons.nlast.Nlast.scala.error
Erreur de compilation :
Nlast:16: error: not found: value reversh
    return reversh(l.tail,l.head::acc)
           ^